feat: Implement comprehensive routing strategies, parcel domain, R2DBC configuration, and database migrations while removing temporary build and test artifacts.